Bug 487873 - Country flags in the Time Zone settings don't scale properly on HiDPI displays
Summary: Country flags in the Time Zone settings don't scale properly on HiDPI displays
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_clock (other bugs)
Version First Reported In: 6.0.4
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-06-01 10:14 UTC by Pavel Urusov
Modified: 2025-01-23 18:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Screenshot showing the Time Zone settings screen (412.32 KB, image/png)
2024-06-01 10:14 UTC, Pavel Urusov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Urusov 2024-06-01 10:14:21 UTC
Created attachment 170040 [details]
Screenshot showing the Time Zone settings screen

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

Country flags in the Time Zone settings do not scale properly on HiDPI displays. They remain the same size regardless of the scaling factor set in the Display settings.

STEPS TO REPRODUCE
1. Set display scaling to any value greater than 100% (e.g. 200%)
2. Go to System Settings -> Date and Time
3. Select the Time Zone tab

OBSERVED RESULT

Country flags in the Region column do not scale correctly; they are too small.

EXPECTED RESULT

Country flags scale together with other UI elements according to the display's scaling factor.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240524
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Kernel Version: 6.9.1-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-06-11 23:20:06 UTC
Can reproduce.
Comment 2 Nate Graham 2024-11-27 20:50:58 UTC
Will be fixed automatically by https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2572.
Comment 3 Niccolò Venerandi 2025-01-23 18:45:27 UTC
Git commit 6fdca0deaebb9d2adc22c737359e774b618fd358 by Niccolò Venerandi.
Committed on 23/01/2025 at 18:45.
Pushed by niccolove into branch 'master'.

Rewrite timezone section of datetime kcm in QML

This revamps the timezone selection page, which will now show a map with all available
("region/location") timezones, _and_ a combobox to select a specific timezone (even
those that might not be on the map, such as "UTC+04").

The new approach is:
- Offline tiles are used to display the map, through QML's MapView. The map tiles are
  directly taken from openstreetmap's website.
- Timezone data is taken from the comprehensive list from 

This allows to see and select actual geographic timezones by clicking on them, without
requiring any third party API during usage or any internet connection at all. It still
allows to select timezones that don't directly map to a region using the combobox.
FIXED-IN: 6.3.0

M  +5    -1    kcms/dateandtime/CMakeLists.txt
M  +3    -52   kcms/dateandtime/dateandtime.ui
M  +22   -21   kcms/dateandtime/dtime.cpp
M  +4    -0    kcms/dateandtime/dtime.h
D  +0    -259  kcms/dateandtime/k4timezonewidget.cpp
D  +0    -139  kcms/dateandtime/k4timezonewidget.h
M  +2    -0    kcms/dateandtime/main.cpp
A  +5    -0    kcms/dateandtime/ui/CMakeLists.txt
A  +17   -0    kcms/dateandtime/ui/main.qml     [License: GPL(v2.0+)]

https://invent.kde.org/plasma/plasma-desktop/-/commit/6fdca0deaebb9d2adc22c737359e774b618fd358